fix: attempt to fix progress bar overflow on safari ios

--- a/src/components/bar-slider/BarSlider.module.css
+++ b/src/components/bar-slider/BarSlider.module.css
@@ -4,6 +4,7 @@
   grid-template-rows: var(--spacing) calc(100% - calc(var(--spacing) * 2)) var(--spacing);
 
   width: 100%;
+  max-width: 100%;
   height: 100%;
 }
 
