--- a/src/components/media-controls/MediaControls.module.css
+++ b/src/components/media-controls/MediaControls.module.css
@@ -70,6 +70,8 @@
 
   overflow: hidden;
 
+  max-width: 100%;
+
   margin: 0;
 }
 
